all busines logic

--- a/cart/src/main/resources/application.properties
+++ b/cart/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.data.mongodb.username=
 spring.data.mongodb.password=
 spring.data.mongodb.uri=mongodb://localhost:27017
 spring.data.mongodb.database=cartService
+
+app.jwt.secret=RandomSecretKey123456789!RandomSecretKey123456789!RandomSecretKey123456789!
+app.jwt.expiration-in-ms=7200000
+app.jwt.refresh.expiration-in-ms=604800000
