--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8082
-
+#postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/productService
 spring.datasource.username=postgres
