--- a/cart/mognodb-deployment.yml
+++ b/cart/mognodb-deployment.yml
@@ -1,40 +1,93 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: mongodb
+  labels:
+    app: mongodb
 spec:
-  ports:
-    - port: 3306
+  type: LoadBalancer
   selector:
-    app: mysql
-  clusterIP: None
+    app: mongodb
+  ports:
+    - protocol: TCP
+      port: 27017
+      name: http
 
 ---
 apiVersion: apps/v1 # for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
 kind: Deployment
 metadata:
-  name: mysql
+  name: mongodb
   labels:
-    app: mysql
+    app: mongodb
 spec:
   selector:
     matchLabels:
-      app: mysql
+      app: mongodb
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: mysql
+        app: mongodb
     spec:
       containers:
-        - image: mysql:5.7
-          name: mysql
+        - image: mongo
+          name: mongodb
           env:
-            - name: MYSQL_DATABASE  # Setting Database name
-              value: oauthService
-            - name: MYSQL_ROOT_PASSWORD # Setting Database password
-              value: "2301003120701"
+            - name: MONGO_INITDB_DATABASE  # Setting Database name
+              value: cartService
+            - name: MONGO_INITDB_ROOT_USERNAME # Setting Database password
+              value:
+            - name: MONGO_INITDB_ROOT_PASSWORD # Setting Database password
+              value:
           ports:
-            - containerPort: 3306
-              name: mysql
+            - containerPort: 27017
+              name: mongo
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: cart
+  labels:
+    app: cart
+spec:
+  type: LoadBalancer
+  selector:
+    app: cart
+  ports:
+    - protocol: TCP
+      port: 8083
+      name: http
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: cart
+spec:
+  selector:
+    matchLabels:
+      app: cart
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: cart
+    spec:
+      containers:
+        - name: myapp
+          image: cart:0.0.1
+          ports:
+            - containerPort: 8083
+          env:
+            - name: SPRING_DATASOURCE_URL  # Setting Database name
+              value: mongodb://mongodb:27017/cartService
+            - name: MONGO_INITDB_ROOT_USERNAME
+              value:
+            - name: MONGO_INITDB_ROOT_PASSWORD
+              value:
+            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
+              value: update
+
