--- a/oauth/mysql-deployment.yml
+++ b/oauth/mysql-deployment.yml
@@ -2,12 +2,16 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql
+  labels:
+    app: mysql
 spec:
-  ports:
-    - port: 3306
+  type: LoadBalancer
   selector:
     app: mysql
-  clusterIP: None
+  ports:
+    - protocol: TCP
+      port: 3306
+      name: http
 
 ---
 apiVersion: apps/v1 # for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
@@ -38,3 +42,51 @@ spec:
           ports:
             - containerPort: 3306
               name: mysql
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: oauth
+  labels:
+    app: oauth
+spec:
+  type: LoadBalancer
+  selector:
+    app: oauth
+  ports:
+    - protocol: TCP
+      port: 8081
+      name: http
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: oauth
+spec:
+  selector:
+    matchLabels:
+      app: oauth
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: oauth
+    spec:
+      containers:
+        - name: myapp
+          image: oauth:0.0.1
+          ports:
+            - containerPort: 8081
+          env:
+            - name: SPRING_DATASOURCE_URL  # Setting Database name
+              value: jdbc:mysql://mysql:3306/oauthService
+            - name: MYSQL_ROOT_PASSWORD # Setting Database password
+              value: "2301003120701"
+            - name: SPRING_DATASOURCE_USERNAME
+              value: root
+            - name: SPRING_DATASOURCE_PASSWORD
+              value: "2301003120701"
+            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
+              value: update
