--- a/oauth/src/main/resources/application.properties
+++ b/oauth/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-
+#mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/oauthService?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=2301003120701
