--- a/product/postgres-deployment.yml
+++ b/product/postgres-deployment.yml
@@ -1,40 +1,93 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: postgres
+  labels:
+    app: postgres
 spec:
-  ports:
-    - port: 3306
+  type: LoadBalancer
   selector:
-    app: mysql
-  clusterIP: None
+    app: postgres
+  ports:
+    - protocol: TCP
+      port: 5432
+      name: http
 
 ---
-apiVersion: apps/v1 # for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mysql
+  name: postgres
   labels:
-    app: mysql
+    app: postgres
 spec:
   selector:
     matchLabels:
-      app: mysql
+      app: postgres
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: mysql
+        app: postgres
     spec:
       containers:
-        - image: mysql:5.7
-          name: mysql
+        - image: postgres:15
+          name: postgres
           env:
-            - name: MYSQL_DATABASE  # Setting Database name
-              value: oauthService
-            - name: MYSQL_ROOT_PASSWORD # Setting Database password
+            - name: POSTGRES_DB
+              value: productService
+            - name: POSTGRES_PASSWORD
               value: "2301003120701"
+            - name: POSTGRES_USER
+              value: postgres
           ports:
-            - containerPort: 3306
-              name: mysql
+            - containerPort: 5432
+              name: postgres
+
+---
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: product
+  labels:
+    app: product
+spec:
+  type: LoadBalancer
+  selector:
+    app: product
+  ports:
+    - protocol: TCP
+      port: 8082
+      name: http
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: product
+spec:
+  selector:
+    matchLabels:
+      app: product
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: product
+    spec:
+      containers:
+        - name: myapp
+          image: product:0.0.1
+          ports:
+            - containerPort: 8082
+          env:
+            - name: SPRING_DATASOURCE_URL  # Setting Database name
+              value: jdbc:postgresql://postgres:5432/productService
+            - name: SPRING_DATASOURCE_USERNAME
+              value: postgres
+            - name: SPRING_DATASOURCE_PASSWORD
+              value: "2301003120701"
+            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
+              value: update
