--- a/cart/docker-compose.yml
+++ b/cart/docker-compose.yml
@@ -8,17 +8,13 @@ services:
       - "8083:8083"
     depends_on:
       - db
-    environment:
-      - SPRING_DATASOURCE_URL=mongodb://db:27017/cartService
+    links:
+      - db
 
   db:
-    image: mongo
+    image: redis
     restart: always
-    container_name: mongodb
+    container_name: redis
     ports:
-      - "27017:27017"
-    environment:
-      - MONGO_INITDB_DATABASE=cartService
-      - MONGO_INITDB_ROOT_USERNAME=
-      - MONGO_INITDB_ROOT_PASSWORD=
+      - "6379:6379"
 
