--- a/cart/src/main/resources/application.properties
+++ b/cart/src/main/resources/application.properties
@@ -1,12 +1,6 @@
 server.port=8083
-#mongodb
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.host= localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.username=
-spring.data.mongodb.password=
-spring.data.mongodb.uri=mongodb://localhost:27017
-spring.data.mongodb.database=cartService
+spring.redis.host=localhost
+spring.redis.port=6379
 
 app.jwt.secret=RandomSecretKey123456789!RandomSecretKey123456789!RandomSecretKey123456789!
 app.jwt.expiration-in-ms=7200000
