--- a/oauth/pom.xml
+++ b/oauth/pom.xml
@@ -78,6 +78,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>4.19.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
