--- a/oauth/src/main/resources/application.properties
+++ b/oauth/src/main/resources/application.properties
@@ -2,13 +2,16 @@ server.port=8081
 #mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/oauthService?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=2301003120701
+spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQL55Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-circular-references=true
 spring.jpa.show-sql=true
+spring.liquibase.change-log=db.changelog/db.changelog-master.yaml
 
 app.jwt.secret=RandomSecretKey123456789!RandomSecretKey123456789!RandomSecretKey123456789!
 app.jwt.expiration-in-ms=7200000
 app.jwt.refresh.expiration-in-ms=604800000
+
+#database.changelogfile = db.changelog/db.changelog-master.yaml
