--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 server.port=8082
 #postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/productService
+spring.datasource.url=jdbc:postgresql://localhost:5432/productService?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=postgres
-spring.datasource.password=2301003120701
+spring.datasource.password=postgres
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+spring.liquibase.change-log=db.changelog/db.changelog-master.yaml
 
 app.jwt.secret=RandomSecretKey123456789!RandomSecretKey123456789!RandomSecretKey123456789!
 app.jwt.expiration-in-ms=7200000
